# verkle-vs-binary-bench

./: .gitignore  .gitmodules  Cargo.toml  README.md  plot_results.py
src/: benchmark.rs  main.rs  utils.rs
src/binary/: circuit.rs  mod.rs  poseidon_merkle_copy.rs  tree.rs  zk.rs
src/verkle/: mod.rs  verkle.rs
