[package]
name = "verkle-vs-binary-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true  # Ensure debug symbols are present
lto = false   # Disable Link Time Optimization (LTO) for faster builds during profiling

[profile.dev]
debug = true

[profile.release.package."*"]
debug = 2

[dependencies]
verkle-trie = { path = "rust-verkle/verkle-trie" }
ipa-multipoint = { path = "rust-verkle/ipa-multipoint" }
sha2 = "0.10.8"
once_cell = "1.19.0"
csv = "1.3.0"
rayon = "1.10.0"
poseidon-merkle= { version = "0.7.0", default-features = false, features = ["zk"] }
rand = "0.8.5"
dusk-bytes = "0.1"
dusk-merkle = "0.5"
dusk-poseidon = "0.40"
dusk-bls12_381 = { version = "0.13", default-features = false }
dusk-plonk = { version = "0.20", default-features = false, features = ["alloc"] }
zeroize = "1.8.1"
ff = { version = "0.13", default-features = false }
serde_json = "1.0.128"
